<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_edit"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    tools:context="com.example.administrator.myapplication.EditActivity">


    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/txt_infokid"
        android:textColor="@android:color/black"
        android:textSize="@dimen/font_title"
        android:textStyle="bold"
        android:id="@+id/textView92"
        android:gravity="center"
       />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/txt_name"
        android:textColor="@android:color/black"
        android:textSize="@dimen/font_title"
        android:textStyle="bold"
        />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/txt_editname"
        android:textSize="@dimen/font_title"
        android:id="@+id/editname"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/txt_editbirthdat"
        android:textStyle="bold"
        android:textColor="@android:color/black"
        android:textSize="@dimen/font_title"/>
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/txt_birthdayedit"
        android:textColor="@android:color/black"
        android:textSize="@dimen/font_title"
        android:id="@+id/editbirthday"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/txt_hight"
        android:textStyle="bold"
        android:textColor="@android:color/black"
        android:textSize="@dimen/font_title"/>
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/txt_edithight"
        android:id="@+id/edithight"/>


    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/txt_weight"
        android:textStyle="bold"
        android:textColor="@android:color/black"
        android:textSize="@dimen/font_title"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/txt_editweight"
        android:id="@+id/editweight"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/txt_sugartarget"
        android:textStyle="bold"
        android:textColor="@android:color/black"
        android:textSize="@dimen/font_title"/>
<LinearLayout
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="horizontal">

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/txt_editsugartarget"
        android:id="@+id/editsugartarget"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/txt_to"
        android:textStyle="bold"
        android:textColor="@android:color/black"
        android:textSize="@dimen/font_title"
        />
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/txt_editsugartarget2"
        android:id="@+id/editsugartarget2"/>
</LinearLayout>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/butt_edit"
        android:id="@+id/button_edit" />
</LinearLayout>
